--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
         <!-- 6 -->
         <div class="card" id="g6">
           <div class="card-number">06</div>
-          <div class="card-title">Bổ ngữ khả năng: V + 得/不 + Complement</div>
+          <div class="card-title">Bổ ngữ khả năng: V + 得/不 + Bổ ngữ (kết quả, xu hướng, mức độ…)</div>
           <div class="card-body">
             <p>Giải thích: nói có thể làm được hay không.</p>
             <ul class="examples">
@@ -2392,3 +2392,4 @@ utter.lang = 'zh-CN';
   </script>
 </body>
 </html>
+
