--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
         <!-- 29 -->
         <div class="card" id="g29">
           <div class="card-number">29</div>
-          <div class="card-title">Động từ li hợp</div>
+          <div class="card-title">Động từ li hợp (离合动词)</div>Những động từ có cấu tạo “động từ + tân ngữ” (hoặc “động + danh”), nhìn như một từ nhưng khi dùng trong câu thường phải tách ra.
           <div class="card-body">
             <p>Ví dụ: <span class="cn">见面、休息、帮忙、聊天</span>…</p>
             <ul class="examples">
@@ -2392,4 +2392,5 @@ utter.lang = 'zh-CN';
   </script>
 </body>
 </html>
+
 
