--- a/index.html
+++ b/index.html
@@ -1245,7 +1245,8 @@
             <p><span class="cn">已经</span> = đã<br>
                <span class="cn">还是</span> = vẫn</p>
             <ul class="examples">
-              <li><span class="cn">我已经知道了。</span> – Tôi biết rồi.</li>
+              <li><span class="cn">我已经知道了。</span> – Tôi biết rồi.</div>
+        我还是不懂。</span> – Tôi vẫn không hiểu.</li>
             </ul>
           </div>
         </div>
@@ -2392,5 +2393,6 @@ utter.lang = 'zh-CN';
   </script>
 </body>
 </html>
+
 
 
