--- a/index.html
+++ b/index.html
@@ -1039,8 +1039,8 @@
           <div class="card-number">16</div>
           <div class="card-title">又 vs 再</div>
           <div class="card-body">
-            <p><strong>又</strong> → lặp lại trong quá khứ.<br>
-               <strong>再</strong> → lặp lại trong tương lai.</p>
+            <p><strong>又</strong> → lặp lại trong quá khứ / việc đã xảy ra.<br>
+               <strong>再</strong> → lặp lại trong tương lai / làm thêm lần nữa.</p>
             <ul class="examples">
               <li><span class="cn">他昨天又迟到。</span> – Hôm qua anh ấy lại đến muộn.</li>
               <li><span class="cn">明天再来。</span> – Ngày mai lại đến.</li>
@@ -2393,6 +2393,7 @@ utter.lang = 'zh-CN';
   </script>
 </body>
 </html>
+
 
 
 
