--- a/index.html
+++ b/index.html
@@ -1326,13 +1326,21 @@
           <div class="card-number">36</div>
           <div class="card-title">Cách nói ước lượng (差不多 / 大概 / 约)</div>
           <div class="card-body">
-            <p>PDF gốc dùng 3 mẫu: <span class="cn">差不多、大概、约</span></p>
-            <ul class="examples">
-              <li><span class="cn">差不多五十块。</span> – Khoảng 50 tệ.</li>
-              <li><span class="cn">大概三点。</span> – Đại khái khoảng 3 giờ.</li>
-              <li><span class="cn">约二十公里。</span> – Khoảng 20 km.</li>
-            </ul>
-          </div>
+  <p><strong>差不多</strong> = khoảng / xấp xỉ (thường dùng trong nói chuyện hằng ngày)</p>
+  <ul class="examples">
+    <li>差不多五十块。– Khoảng 50 tệ.</li>
+  </ul>
+
+  <p><strong>大概</strong> = đại khái / khoảng (ước lượng thời gian, số lượng, phỏng đoán)</p>
+  <ul class="examples">
+    <li>大概三点。– Đại khái khoảng 3 giờ.</li>
+  </ul>
+
+  <p><strong>约</strong> = khoảng (trang trọng hơn, hay dùng trong viết/ thông tin)</p>
+  <ul class="examples">
+    <li>约二十公里。– Khoảng 20 km.</li>
+  </ul>
+</div>
         </div>
 
       </div> <!-- END VIII -->
@@ -2393,6 +2401,7 @@ utter.lang = 'zh-CN';
   </script>
 </body>
 </html>
+
 
 
 
