--- a/index.html
+++ b/index.html
@@ -1218,11 +1218,22 @@
         <div class="card" id="g28">
           <div class="card-number">28</div>
           <div class="card-title">Năng nguyện động từ: 会 / 能 / 可以</div>
-          <div class="card-body">
-            <ul class="examples">
-              <li><span class="cn">我会说中文。</span> – Tôi biết nói tiếng Trung.</li>
-            </ul>
-          </div>
+<div class="card-body">
+  <ul class="examples">
+    <li>
+      <p><strong>会</strong> = biết / thành thạo / sẽ (kỹ năng hoặc dự đoán)</p>
+      <span>我会说中文。</span> – Tôi biết nói tiếng Trung.
+    </li>
+    <li>
+      <p><strong>能</strong> = có thể (năng lực/điều kiện cho phép về mặt thực tế)</p>
+      <span>我今天不能去。</span> – Hôm nay tôi không thể đi.
+    </li>
+    <li>
+      <p><strong>可以</strong> = có thể / được phép (xin phép, cho phép)</p>
+      <span>这里可以坐吗？</span> – Ở đây ngồi được không?
+    </li>
+  </ul>
+</div>
         </div>
 
         <!-- 29 -->
@@ -2401,6 +2412,7 @@ utter.lang = 'zh-CN';
   </script>
 </body>
 </html>
+
 
 
 
