--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
         <!-- 15 -->
         <div class="card" id="g15">
           <div class="card-number">15</div>
-          <div class="card-title">还是 (nên…)</div>
+          <div class="card-title">还是 (nên/ vẫn nên…)</div>
           <div class="card-body">
             <p>Dùng để đưa ra lời khuyên nhẹ nhàng.</p>
             <ul class="examples">
@@ -1075,10 +1075,10 @@
         <!-- 18 -->
         <div class="card" id="g18">
           <div class="card-number">18</div>
-          <div class="card-title">虽然…但是… (tuy… nhưng…)</div>
+          <div class="card-title">虽然…但是… (tuy… nhưng…)</div> 
           <div class="card-body">
             <ul class="examples">
-              <li><span class="cn">虽然很累，但是很开心。</span></li>
+              <li><span class="cn">虽然很累，但是我很开心。</span> - Tuy rằng rất mệt, nhưng tôi rất vui.</li>
             </ul>
           </div>
         </div>
@@ -1089,7 +1089,7 @@
           <div class="card-title">因为…所以… (vì… nên…)</div>
           <div class="card-body">
             <ul class="examples">
-              <li><span class="cn">因为下雨，所以没去。</span></li>
+              <li><span class="cn">因为下雨，所以我没去。</span> - Bởi vì trời mưa, nên tôi không đi.</li>
             </ul>
           </div>
         </div>
@@ -1112,7 +1112,7 @@
           <div class="card-body">
             <p>Dùng chỉ thứ tự hành động.</p>
             <ul class="examples">
-              <li><span class="cn">先吃饭，再工作。</span></li>
+              <li><span class="cn">先吃饭，再工作。</span> - Ăn cơm trước, sau đó lại làm việc.</li>
             </ul>
           </div>
         </div>
@@ -1123,7 +1123,7 @@
           <div class="card-title">不但…而且… (không chỉ… mà còn…)</div>
           <div class="card-body">
             <ul class="examples">
-              <li><span class="cn">他不但会说中文，而且说得很好。</span></li>
+              <li><span class="cn">他不但会说中文，而且说得很好。</span> - Anh ấy không những biết nói tiếng Trung, mà còn nói rất tốt.</li>
             </ul>
           </div>
         </div>
@@ -1243,7 +1243,7 @@
           <div class="card-body">
             <p>Ví dụ: <span class="cn">见面、休息、帮忙、聊天</span>…</p>
             <ul class="examples">
-              <li><span class="cn">我们明天见面。</span> – Ngày mai chúng ta gặp nhau.</li>
+              <li><span class="cn">我们明天见（个）面吧。</span> – Ngày mai chúng ta gặp nhau đi.</li>
             </ul>
           </div>
         </div>
@@ -1256,7 +1256,7 @@
             <p><span class="cn">已经</span> = đã<br>
                <span class="cn">还是</span> = vẫn</p>
             <ul class="examples">
-  <li><span class="cn">我已经知道了。</span> – Tôi biết rồi.</li>
+  <li><span class="cn">我已经知道了。</span> – Tôi đã biết rồi.</li>
   <li><span class="cn">我还是不懂。</span> – Tôi vẫn không hiểu.</li>
 </ul>
           </div>
@@ -2412,6 +2412,7 @@ utter.lang = 'zh-CN';
   </script>
 </body>
 </html>
+
 
 
 
